deploy/orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: catalog-demo
  labels:
    app: orders
    service: orders
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: catalog-demo
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: ghcr.io/btjimerson/ecommerce-demo/orders
        ports:
        - containerPort: 8080
