deploy/payment-history.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-history
  namespace: catalog-demo
  labels:
    app: payment-history
    service: payment-history
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: payment-history
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-history
  namespace: catalog-demo
  labels:
    app: payment-history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-history
  template:
    metadata:
      labels:
        app: payment-history
    spec:
      serviceAccount: payment
      containers:
      - name: payment-history
        image: ghcr.io/btjimerson/ecommerce-demo/payment-history
        ports:
        - containerPort: 8080
