deploy/frontend-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gw
  namespace: catalog-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "catalog-demo.aspenmesh.pintobean.xyz"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: catalog-demo
spec:
  hosts:
  - "catalog-demo.aspenmesh.pintobean.xyz"
  gateways:
  - frontend-gw
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 8080
